--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "framer-motion": "^10.15.1",
+    "lucide-react": "^0.539.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
-    "react-router-dom": "^6.19.0",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
